--- a/app/templates/add_flights.html
+++ b/app/templates/add_flights.html
@@ -36,88 +36,109 @@
     <div class="row">
         <div class="col-md-13 offset-md-0">
             <form method="post" action="/add_flights" class="shadow p-4 mt-4">
-                <div class="row">
-                    <div class="col-sm-6 form-group">
-                        <label for="airport1" class="form-label">Sân bay đến:</label>
-                        <select class="form-select" id="airport1" name="airport1" required>
-                            <option selected disabled>Chọn một sân bay</option>
-                            {% for airport in airports %}
-                            <option value="{{ airport.name }}">{{ airport.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="col-sm-6 form-group">
-                        <label for="airport2" class="form-label">Sân bay đến:</label>
-                        <select class="form-select" id="airport2" name="airport2" required>
-                            <option selected disabled>Chọn một sân bay</option>
-                            {% for airport in airports %}
-                            <option value="{{ airport.name }}">{{ airport.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="col-sm-2 form-group">
-                        <label for="date1">Ngày bay: </label>
-                        <input type="date" class="form-control form-control-ml"
-                               id="date1" name="date1" required/>
-                    </div>
-                    <div class="col-sm-2 form-group">
-                        <label for="time1">Giời bay: </label>
-                        <input type="text" class="form-control form-control-ml"
-                               id="time1" name="time1" required/>
-                    </div>
-                    <div class="col-sm-2 form-group">
-                        <label for="time2">Thời gian bay: </label>
-                        <input type="text" class="form-control form-control-ml"
-                               id="time2" name="time2" required/>
-                    </div>
+
+                 <div class="row">
+                     <div class="col-sm-6 form-group">
+                         <label for="airport1">Sân bay đi : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập sân bay đi.." class="form-control"
+                                               id="airport1" name="sb1" required/>
+                     </div>
+                     <div class="col-sm-6 form-group">
+                         <label for="airport2">Sân bay đến : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập sân bay đến.." class="form-control"
+                                               id="airport2" name="sb2" required/>
+                     </div>
+
+<!--                     <div class="col-sm-3 form-group">-->
+<!--                         <label for="date">Ngày : <span-->
+<!--                            class="text-danger" style="color:red;">*</span></label>-->
+<!--                         <input type="date" class="form-control form-control-ml"-->
+<!--                                               id="date" name="date"/>-->
+<!--                     </div>-->
 
                     <div class="col-sm-3 form-group">
-                        <label for="1stclass">Số lượng ghế hạng 1: </label>
-                        <input type="text" class="form-control"
-                               id="1stclass" name="1stclass" required/>
+                      <label for="time1">TG khởi hành : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                        <input type="datetime-local" class="form-control" id="time1" name="time1"/>
                     </div>
 
-                    <div class="col-sm-3 form-group">
-                        <label for="2ndclass">Số lượng ghê hạng 2: </label>
-                        <input type="text" placeholder="Enter Username Here.." class="form-control"
-                               id="2ndclass" name="2ndclass" required/>
-                    </div>
+                     <div class="col-sm-3 form-group">
+                         <label for="time5">TG đến : <span class="text-danger" style="color:red;">*</span></label>
+                         <input type="datetime-local" class="form-control" id="time5" name="time5" />
+                     </div>
 
-                    <div class="col-sm-3 form-group">
-                        <label for="AP_TG1">Sân bay trung gian: </label>
-                        <input type="text" placeholder="Sân bay trung gian 1"
-                               class="form-control"
-                               id="AP_TG1" name="AP_TG1" required/>
-                        <br>
-                        <input type="text" placeholder="Sân bay trung gian 2 (Nếu có)"
-                               class="form-control"
-                               id="AP_TG2" name="AP_TG2" required/>
-                    </div>
 
-                    <div class="col-sm-3 form-group">
-                        <label for="pendingT">Thời gian dừng: </label>
-                        <input type="number" placeholder="Thời gian dừng tối đa 30 phút"
-                               class="form-control"
-                               id="pendingT" name="pendingT" required/>
-                    </div>
-                    <div class="col-sm-6 form-group">
-                        <label for="note">Ghi chú</label>
-                        <input type="text" placeholder="Ghi chú..."
-                               class="form-control"
-                               id="note" name="note" required/>
-                    </div>
-                    <div class="col-sm-6 form-group">
-                        <label for="route" class="form-label">Ma tuyến bay:</label>
-                        <select class="form-select" id="route" name="route" required>
-                            <option selected disabled>Chọn mã tuyến bay</option>
-                            {% for r in flightRoute %}
+                     <div class="col-sm-3 form-group">
+                         <label for="quantity1">Số lượng vé loại 1 : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập số lượng vé.." class="form-control"
+                                               id="quantity1" name="quantity1" required/>
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label for="quantity2">Số lượng vé loại 2 : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập số lượng vé.." class="form-control"
+                                               id="quantity2" name="quantity2" required/>
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label for="AP_TG1">Sân bay trung gian : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập sân bay.."
+                                               class="form-control"
+                                               id="AP_TG1" name="sb3" required/>
+                         <br>
+                         <input type="text" placeholder= "Nhập sân bay 2.. (Nếu có)"
+                                               class="form-control"
+                                               id="AP_TG2" name="sb4">
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label for="time2">Thời gian dừng : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập thời gian.."
+                                               class="form-control"
+                                               id="time2" name="time2" required/>
+                         <br>
+                         <input type="text" placeholder="Nhập thời gian.."
+                                               class="form-control"
+                                               id="time3" name="time3"/>
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label class="form-label" for="note">Thời gian bay : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập thời gian.."
+                                               class="form-control"
+                                               id="time4" name="time4" required/>
+                          <label class="form-label" for="note">Mã tuyến bay : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <select class="form-select" id="route" name="route" required>
+                            <option selected disabled>Chọn mã tuyến</option>
+                            {% for r in route %}
                             <option value="{{ r.id }}">{{ r.id }}</option>
                             {% endfor %}
                         </select>
-                    </div>
+
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label class="form-label" for="note">Ghi chú : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập ghi chú.."
+                                               class="form-control"
+                                               id="note" name="note" required/>
+                     </div>
+
+
                 </div>
+
+
                 <section style="position: relative;">
-                    <div class="mb-3" style="text-align: right; position: absolute; top: -30px;right: 0px;">
+                    <div class="mb-3" style="text-align: right; position: absolute; top: -55px; left: 84%;">
                         <button type="submit" class="btn btn-success">Tạo lịch chuyến bay</button>
                     </div>
                 </section>
@@ -128,8 +149,8 @@
                 <tr>
                     <th scope="col">Sân bay đi</th>
                     <th scope="col">Sân bay đến</th>
-                    <th scope="col">Ngày bay</th>
-                    <th scope="col">Giời bay</th>
+                    <th scope="col">TG khởi hành</th>
+                    <th scope="col">TG đến</th>
                     <th scope="col">Thời gian bay</th>
                     <th scope="col">1st Class</th>
                     <th scope="col">2nd Class</th>
@@ -143,9 +164,9 @@
                 <tr>
                     <td>{{ flight.D_air }}</td>
                     <td>{{ flight.A_air }}</td>
-                    <td>{{ flight.Date }}</td>
                     <td>{{ flight.T_time }}</td>
                     <td>{{ flight.E_time }}</td>
+                    <td>{{ flight.Flight_time }}</td>
                     <td>{{ flight.T1_quantity }}</td>
                     <td>{{ flight.T2_quantity }}</td>
                     {% if flight.I2_air != '' %}
@@ -159,7 +180,11 @@
                         {% else %}
                         <td>{{ flight.S_time }} phút</td>
                     {%endif%}
-                    <td>{{ flight.note }}</td>
+                    {% if flight.note == '1' %}
+                    <td>&#9989;</td>
+                    {% elif u.note == '0' %}<td>&#10060;</td>
+                    {% else %} <td> {{ flight.note }}</td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
                 </tbody>
