--- a/app/templates/flight_edit.html
+++ b/app/templates/flight_edit.html
@@ -21,7 +21,7 @@
 </style>
 
 
-<div style="position: absolute; top: 5%; left:3%; width: 1450px; height: 950px; background-color: white; text-align: center; border-radius: 30px;" >
+<div style="position: absolute; top: 5%; left:3%; width: 1450px; height: 1000px; background-color: white; text-align: center; border-radius: 30px;" >
         <div class="container">
             <form method="POST" action="/admin/flightview/{{flight.id}}/edit">
                 <div class="form-group">
@@ -38,19 +38,27 @@
                            style="position: absolute; width: 1300px; top: 115px; left: 5%; height: 35px;"
                            id="A_air" name="sb2" required value="{{flight.A_air}}">
                 </div>
+<!--                <div class="form-group">-->
+<!--                    <label style="position: absolute;  top: 155px; left: 5%; ">Ngày :<span class="text-danger"-->
+<!--                                                                                           style="color:red;">*</span></label>-->
+<!--                    <input type="Date" class="form-control"-->
+<!--                           style="position: absolute; width: 1300px; top: 185px; left: 5%; height: 35px;"-->
+<!--                           id="Date" name="date" required value="{{flight.Date}}">-->
+<!--                </div>-->
                 <div class="form-group">
-                    <label style="position: absolute;  top: 155px; left: 5%; ">Ngày :<span class="text-danger"
-                                                                                           style="color:red;">*</span></label>
-                    <input type="Date" class="form-control"
+                    <label style="position: absolute;  top: 155px; left: 5%; ">Thời gian khởi hành :<span
+                            class="text-danger" style="color:red;">*</span></label>
+                    <input type="text" class="form-control"
                            style="position: absolute; width: 1300px; top: 185px; left: 5%; height: 35px;"
-                           id="Date" name="date" required value="{{flight.Date}}">
+                           id="time1" name="time1" required value="{{flight.T_time}}">
                 </div>
+
                 <div class="form-group">
-                    <label style="position: absolute;  top: 225px; left: 5%; ">Thời gian khởi hành :<span
+                    <label style="position: absolute;  top: 225px; left: 5%; ">Thời gian đến :<span
                             class="text-danger" style="color:red;">*</span></label>
                     <input type="text" class="form-control"
                            style="position: absolute; width: 1300px; top: 255px; left: 5%; height: 35px;"
-                           id="time1" name="time1" required value="{{flight.T_time}}">
+                           id="time5" name="time5" required value="{{flight.E_time}}">
                 </div>
 
                 <div class="form-group">
@@ -113,15 +121,22 @@
                            style="position: absolute; width: 1300px; top: 820px; left: 5%; height: 35px;"
                            id="status" name="status" required value="{{flight.note}}">
                 </div>
+                <div class="form-group">
+                    <label style="position: absolute;  top: 860px; left: 5%; ">Tuyến bay :<span class="text-danger"
+                                                                                                 style="color:red;">*</span></label>
+                    <input type="text" class="form-control"
+                           style="position: absolute; width: 1300px; top: 890px; left: 5%; height: 35px;"
+                           id="FR" name="route" required value="{{flight.flightRoute_id}}">
+                </div>
 
                 <button type="submit" class="btn bg-primary"
-                        style="position: absolute; color: white;  top: 870px; left: 5%; ">
+                        style="position: absolute; color: white;  top: 940px; left: 5%; ">
                     Thay đổi
                 </button>
 
                 <a href="/admin/flightview/">
                     <button type="button" class="btn bg-success"
-                            style="position: absolute; color: white; top: 870px; left: 19%; width: 87px;">
+                            style="position: absolute; color: white; top: 940px; left: 19%; width: 87px;">
                         Quay lại
                     </button>
                 </a>
@@ -129,7 +144,7 @@
 
             <form method="POST" action="/admin/flightview/{{flight.id}}/edit-delete">
                     <button  type="submit" class="btn bg-danger"
-                            style="position: absolute; color: white;  top: 870px; left: 12%; width: 87px;">
+                            style="position: absolute; color: white;  top: 940px; left: 12%; width: 87px;">
                         Xóa
                     </button>
             </form>
