--- a/app/static/CSS/customer_info.css
+++ b/app/static/CSS/customer_info.css
@@ -62,6 +62,7 @@
         flex-direction:column;
         gap: 16px;
         padding: 20px 24px;
+
   }
   .form_c_info{
         width: 100%;
@@ -87,7 +88,7 @@
             gap: 4px;
   }
   .form_textbox{
-        display: block;
+        display: flex;
         height: 50px;
         width: 100%;
         padding: 0.375rem 0.75rem;
@@ -99,4 +100,5 @@
         background-clip: padding-box;
         border: 1px solid #ced4da;
         border-radius: 20px;
+        align-items: center;
   }
