--- a/app/templates/update_pass_forgot.html
+++ b/app/templates/update_pass_forgot.html
@@ -37,20 +37,19 @@
 {% endif %}
 
 
-<div style="position: absolute; top: 10%; left:6%; width: 1450px; height: 450px; background-color: white; text-align: center; border-radius: 30px;" >
+<div style="top: 10%; left:6%; width: 1530px; height: 530px; background-color: white; text-align: center; border-radius: 30px;" >
    <form method="POST" action="/forgot-password/verify/update-pass">
         <div class="input-group">
-            <label style="position: absolute;  top: 140px; left: 33%; ">Nhập mật khẩu mới :<span class="text-danger">*</span></label>
-            <input type="password" class="form-control narrow-input" style="position: absolute; width: 500px; top: 170px; left: 33%; height: 60px; border-radius: 30px;"
+            <label style="position: absolute;  top: 140px; left: 40%; ">Nhập mật khẩu mới :<span class="text-danger">*</span></label>
+            <input type="password" class="form-control narrow-input" style="position: absolute; width: 500px; top: 170px; left: 40%; height: 60px; border-radius: 30px;"
                    placeholder="Enter Password" id="new_password" name="new_password" required/>
 
-            <label style="position: absolute;  top: 250px; left: 33%; ">Xác nhận lại mật khẩu :<span class="text-danger">*</span></label>
-            <input type="password" class="form-control narrow-input" style="position: absolute; width: 500px; top: 280px; left: 33%; height: 60px; border-radius: 30px;"
+            <label style="position: absolute;  top: 250px; left: 40%; ">Xác nhận lại mật khẩu :<span class="text-danger">*</span></label>
+            <input type="password" class="form-control narrow-input" style="position: absolute; width: 500px; top: 280px; left: 40%; height: 60px; border-radius: 30px;"
                    placeholder="Enter Password" id="confirm" name="confirm" required/>
 
             <button type="submit" class="btn btn-success btn-lg"
-        style="top: 360px; margin-left: 44%; padding-left: 2.5rem; padding-right: 2.5rem; border-radius: 30px;">Cập nhật</button>
-
+        style="top: 360px; margin-left: 51%; padding-left: 2.5rem; padding-right: 2.5rem; border-radius: 30px;">Cập nhật</button>
 
         </div>
    </form>
