--- a/app/templates/forgot_pass.html
+++ b/app/templates/forgot_pass.html
@@ -45,7 +45,7 @@
 <div>
 
      <img src="https://www.vietnamairlines.com/~/media/Files/VNANewPage-Images/Vietnam%20Airlines/Overview/DOI_TAUBAY_Thumb.jpg"
-         alt="Image" style="position: absolute; top: 20; left: 30; width: 65%; height: 88%;">
+         alt="Image" style="top: 20; left: 30; width: 65%; height: 88%;">
 
     <form method="POST" action="/forgot-password" style="position: absolute; top: 45%; left: 83%; transform: translate(-50%, -50%); width: 25%;">
         <div class="input-group">
