--- a/app/templates/employee_pay.html
+++ b/app/templates/employee_pay.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div class="container-icon">
-                                <img src="/static/Image/yellow-plane-icon.png" style="width 50%; height:50%">
+                                <img src="/static/Image/yellow-plane-icon.png" style="height:50%">
                             </div>
                             <div class="chat">
                                 <div class="chat1" style="font-weight: bold;">
@@ -219,7 +219,7 @@
                 </div>
             </div>
             <div class="con2_2">
-                <button type="button" class="btn_back">← Quay lại</button>
+                <button type="submit" class="btn_back" onclick="quayLai()">← Quay lại</button>
             </div>
         </div>
     </div>
