--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
 
     <link href="{{ url_for('static', filename='CSS/index.css') }}" rel="stylesheet">
-
+    <link href="{{ url_for('static', filename='CSS/flight_list.css') }}" rel="stylesheet">
 </head>
 <body>
 
@@ -26,6 +26,5 @@
 {% endblock %}
 
 {% include 'layout/footer.html' %}
-
 </body>
 </html>
