--- a/app/templates/user_info.html
+++ b/app/templates/user_info.html
@@ -1,18 +1,14 @@
 {% extends 'layout/base.html' %}
-
-
 {% block title %}Tài khoản của tôi{% endblock %}
-
-
-
 {% block content %}
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <section class="vh-100 bg-image"
-		 style="background-image: url(https://tindep.com/wp-content/uploads/2023/03/background-bau-troi--background-sky-xanh--hoang-hon-dep--buon-15.jpg);">
+		 style="background-image: url('/static/Image/1.png');
+        background-size: 900px;
+        width: 100%;
+        background-repeat: repeat;
+        ">
 	<div class="mask d-flex align-items-center h-100 gradient-custom-3">
-
-
-
 				<div class="container">
 					<div class="row-cols-1 row-cols-md-2 row-cols-xl-3">
 
