--- a/app/templates/customer_pay.html
+++ b/app/templates/customer_pay.html
@@ -6,6 +6,7 @@
     <link href="{{ url_for('static', filename='CSS/customer_pay.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='CSS/customer_info.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='CSS/flight_list.css') }}" rel="stylesheet">
+    <script src="/static/JS/function.js"></script>
 </head>
 <body>
 {% include 'layout/header.html' %}
@@ -69,7 +70,7 @@
                                 </div>
                             </div>
                             <div class="container-icon">
-                                <img src="/static/Image/yellow-plane-icon.png" style="width 50%; height:50%">
+                                <img src="/static/Image/yellow-plane-icon.png" style="height:50%">
                             </div>
                             <div class="chat">
                                 <div class="chat1" style="font-weight: bold;">
@@ -190,7 +191,7 @@
                 </div>
             </div>
             <div class="con2_2">
-                <button type="button" class="btn_back">← Quay lại</button>
+                <button type="button" class="btn_back" onclick="quayLai()">← Quay lại</button>
             </div>
         </div>
     </div>
