--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -10,8 +10,7 @@
             color: #fff;
             padding: 20px;
             text-align: center;
-            position: relative;
-            bottom 0;
+            bottom :0;
             left: 0;
 
         }
