--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,71 +32,59 @@
     </div>
 </div>
 {% endif %}
-<body style="overflow: hidden;">
-<section class="vh-100">
-    <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                     class="img-fluid" alt="Sample image">
-            </div>
-            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form method="post" action="/user-login" style="  position: relative; bottom: -60px;">
 
-                    <!-- Username input -->
-                    <div class="form-outline mb-3">
-                        <input type="text" id="username" class="form-control form-control-lg"
-                               placeholder="Enter a valid username" name="username"/>
-                        <label class="form-label" for="username">username</label>
-                    </div>
+    <section class="vh-100">
+        <div class="container-fluid h-custom">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-md-7 col-lg-6 col-xl-5">
+                    <img src="/static/Image/logo-OUAir.png"
+                         class="img-fluid" alt="Sample image">
+                </div>
+                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                    <form method="post" action="/user-login" style="  position: relative; bottom: -60px;">
 
-                    <!-- Password input -->
-                    <div class="form-outline mb-3">
-                        <input type="password" id="pwd" class="form-control form-control-lg"
-                               placeholder="Enter password" name="password"/>
-                        <label class="form-label" for="pwd">password</label>
-                    </div>
-
-                    <div class="d-flex justify-content-between align-items-center">
-                        <!-- Checkbox -->
-                        <div class="form-check mb-0">
-                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3"/>
-                            <label class="form-check-label" for="form2Example3">
-                                Remember me
-                            </label>
+                        <!-- Username input -->
+                        <div class="form-outline mb-3">
+                            <label class="form-label" for="username" style="display: flex; font-size: 40px; color:#E09824; font-weight: bold;justify-content: center; ">LOGIN</label>
                         </div>
-                        <a href="/forgot-password" class="text-body">Forgot password?</a>
-                    </div>
+                        <div class="form-outline mb-3">
+                            <label class="form-label" for="username">Username:</label>
+                            <input type="text" id="username" class="form-control form-control-lg"
+                                   placeholder="Enter a valid username" name="username"/>
+                        </div>
 
-                    <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="submit" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
-                        </button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
-                                                                                          class="link-danger">Register</a>
-                        </p>
-                    </div>
+                        <!-- Password input -->
+                        <div class="form-outline mb-3">
 
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid h-100">
-        <div class="row h-100">
-            <div class="col-12"
-                 style="background-color: #007bff; color: white; position: fixed; bottom: 0; width: 100%; z-index: 1;">
-                <div
-                        class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5">
-                    <div
-                            class="text-white mb-5 mb-md-0">Copyright © 2023. All rights reserved.
-                    </div>
+                            <label class="form-label" for="pwd">Password:</label>
+                            <input type="password" id="pwd" class="form-control form-control-lg"
+                                   placeholder="Enter password" name="password"/>
+                        </div>
+
+                        <div class="d-flex justify-content-between align-items-center">
+                            <!-- Checkbox -->
+                            <div class="form-check mb-0">
+                                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3"/>
+                                <label class="form-check-label" for="form2Example3">
+                                    Remember me
+                                </label>
+                            </div>
+                            <a href="/forgot-password" class="text-body">Forgot password?</a>
+                        </div>
+
+                        <div class="text-center text-lg-start mt-4 pt-2">
+                            <button type="submit" class="btn btn-primary btn-lg"
+                                    style="padding-left: 2.5rem; padding-right: 2.5rem; background-color:#364681;">Login
+                            </button>
+                            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
+                                                                                              class="link-danger">Register</a>
+                            </p>
+                        </div>
+
+                    </form>
                 </div>
             </div>
-            <div
-                    class="col-12">
-            </div>
         </div>
-    </div>
-</section>
-</body>
+    </section>
+
 {% endblock %}
