--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -32,84 +32,102 @@
     </div>
 </div>
 {% endif %}
-<!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
+<style>
+    .form-dk{
+        display:flex;
+        flex-direction: column;
+        gap: 20px;
+
+    }
+    .form-dk-2{
+        display:flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+</style>
 <section class="vh-100 bg-image"
-         style="background-image: url('https://www.metoffice.gov.uk/binaries/content/gallery/metofficegovuk/hero-images/weather/cloud/cumulus-cloud.jpg    ');">
+		 style="background-image: url('/static/Image/1.png');
+        background-size: 900px;
+        width: 100%;
+        background-repeat: repeat;
+        ">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-
         <div class="container">
             <div class="col-lg-8 card" style="position: absolute; top: 22%; left: 18%; border-radius: 15px;">
-                <div class="card-body p-5">
-                    <h2 class="text-uppercase text-center mb-5 " style="font-weight: bold;">Create an account</h2>
-                    <div class="row">
-                        <form method="POST" action="/register">
-                            <div class="col-sm-12">
-                                <div class="row">
-                                    <div class="form-group">
-                                        <label for="fullname">Full Name</label>
-                                        <input type="text" placeholder="Enter Full Name Here.." class="form-control"
-                                               id="fullname" name="fullname" required/>
-                                    </div>
-                                    <div class="col-sm-6 form-group">
-                                        <label for="username">Username</label>
-                                        <input type="text" placeholder="Enter Username Here.." class="form-control"
-                                               id="username" name="username" required/>
-                                    </div>
-                                    <div class="col-sm-6 form-group">
-                                        <label for="address">Address</label>
-                                        <input type="text" placeholder="Enter Address Here.." class="form-control"
-                                               id="address" name="address" required/>
-                                    </div>
-
-                                    <div class="col-sm-6 form-group">
-                                        <label for="pwd">Password</label>
-                                        <input type="password" placeholder="Enter Password Here.." class="form-control"
-                                               id="pwd" name="password" required/>
-                                    </div>
-
-                                    <div class="col-sm-6 form-group">
-                                        <label for="confirm">Confirm Password</label>
-                                        <input type="password" placeholder="Enter Confirm Password Here.."
-                                               class="form-control"
-                                               id="confirm" name="confirm" required/>
-                                    </div>
-
-                                    <div class="col-sm-6 form-group">
-                                        <label for="phone">Phone Number</label>
-                                        <input type="number" placeholder="Enter Phone Number Here.."
-                                               class="form-control"
-                                               id="phone" name="phone" required/>
-                                    </div>
-                                    <div class="col-sm-6 form-group">
-                                        <label class="form-label" for="Date">Date</label>
-                                        <input type="date" class="form-control form-control-lg"
-                                               id="Date" name="date" required/>
-                                    </div>
-                                    <div class="col-sm-6 form-group">
-                                        <label for="cmnd">CMND</label>
-                                        <input type="number" placeholder="Enter ID CMND Here.."
-                                               class="form-control"
-                                               id="cmnd" name="cmnd" required/>
-                                    </div>
-
-                                    <div class="col-sm-6 form-group">
-                                        <label for="email">Email</label>
-                                        <input type="email" placeholder="Enter Email Address Here.."
-                                               class="form-control"
-                                               id="email" name="email" required/>
-                                    </div>
-
-                                    <button type="submit" class="btn btn-lg btn-info"
-                                            style="background-color: #32CD32; font-weight: bold">Submit
-                                    </button>
-                                </div>
+                <div class="card-body p-5" style="display: flex;flex-direction: column;  padding: 30px">
+                    <h2 class="text-uppercase text-center" style="font-weight: bold;">Create an account</h2>
+                    <form method="POST" action="/register">
+                        <div class="form-dk">
+                                        <div class="col-sm-12 form-group">
+                                            <label for="fullname">Full Name</label>
+                                            <input type="text" placeholder="Enter Full Name Here.." class="form-control"
+                                                   id="fullname" name="fullname"  required/>
+                                        </div>
+                            <div class="form-dk-2">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="username">Username</label>
+                                            <input type="text" placeholder="Enter Username Here.." class="form-control"
+                                                   id="username" name="username" required/>
+                                        </div>
+                                        <div class="col-sm-6 form-group">
+                                            <label for="address">Address</label>
+                                            <input type="text" placeholder="Enter Address Here.." class="form-control"
+                                                   id="address" name="address" required/>
+                                        </div>
                             </div>
-                        </form>
-                    </div>
+                            <div class="form-dk-2">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="pwd">Password</label>
+                                            <input type="password" placeholder="Enter Password Here.." class="form-control"
+                                                   id="pwd" name="password" required/>
+                                        </div>
+
+                                        <div class="col-sm-6 form-group">
+                                            <label for="confirm">Confirm Password</label>
+                                            <input type="password" placeholder="Enter Confirm Password Here.."
+                                                   class="form-control"
+                                                   id="confirm" name="confirm" required/>
+                                        </div>
+                            </div>
+                            <div class="form-dk-2">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="phone">Phone Number</label>
+                                            <input type="number" placeholder="Enter Phone Number Here.."
+                                                   class="form-control"
+                                                   id="phone" name="phone" required/>
+                                        </div>
+                                        <div class="col-sm-6 form-group">
+                                            <label for="Date">Date</label>
+                                            <input type="date" class="form-control"
+                                                   id="Date" name="date" required/>
+                                        </div>
+                            </div>
+                            <div class="form-dk-2">
+                                        <div class="col-sm-6 form-group">
+                                            <label for="cmnd">CMND</label>
+                                            <input type="number" placeholder="Enter ID CMND Here.."
+                                                   class="form-control"
+                                                   id="cmnd" name="cmnd" required/>
+                                        </div>
+
+                                        <div class="col-sm-6 form-group">
+                                            <label for="email">Email</label>
+                                            <input type="email" placeholder="Enter Email Address Here.."
+                                                   class="form-control"
+                                                   id="email" name="email" required/>
+                                        </div>
+                            </div>
+                            <div class="form-dk-2">
+                                        <button type="submit" class="btn btn-lg col-sm-12"
+                                                style="background-color: #364681; font-weight: bold ;color: white;">Đăng ký
+                                        </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
